--- a/mpc/Cargo.toml
+++ b/mpc/Cargo.toml
@@ -48,8 +48,9 @@ rand = "0.3.14"
 rustc-serialize = "~0.3.19"
 blake2-rfc = "0.2.17"
 byteorder = "0.5"
-hyper = "0.11.2"
+hyper = "0.8.0"
 tokio-core = "0.1.9"
+futures = "0.1"
 
 # Coordinator needs these
 log = "*"
