--- a/mpc/Cargo.toml
+++ b/mpc/Cargo.toml
@@ -44,13 +44,14 @@ optional = true
 [dependencies]
 bn = "0.4.1"
 crossbeam = "0.2.9"
+ethabi = "4.0"
 rand = "0.3.14"
 rustc-serialize = "~0.3.19"
 blake2-rfc = "0.2.17"
 byteorder = "0.5"
-hyper = "0.8.0"
 tokio-core = "0.1.9"
 futures = "0.1"
+# web3 = "0.1.0"
 
 # Coordinator needs these
 log = "*"
@@ -63,3 +64,5 @@ version = "0.6.0"
 default-features = false
 features = ["rustc-serialize"]
 
+[dependencies.web3]
+path = "src/rust-web3"
