--- a/mpc/Cargo.toml
+++ b/mpc/Cargo.toml
@@ -57,6 +57,10 @@ byteorder = "0.5"
 tokio-core = "0.1.9"
 futures = "0.1"
 sha3 = "0.7.2"
+serde_json = "1.0.9"
+serde_derive = "1.0.27"
+serde = "1.0.27"
+ipfs-api = { git = "https://github.com/rmnoff/rust-ipfs-api" }
 web3 = { git = "https://github.com/tomusdrw/rust-web3" }
 
 # Coordinator needs these
