--- a/mpc/Cargo.toml
+++ b/mpc/Cargo.toml
@@ -62,6 +62,7 @@ serde_derive = "1.0.27"
 serde = "1.0.27"
 json = "*"
 hex = "0.3.1"
+spinner = "0.4.0"
 ipfs-api = { git = "https://github.com/rmnoff/rust-ipfs-api" }
 web3 = { git = "https://github.com/tomusdrw/rust-web3" }
 
