--- a/mpc/Cargo.toml
+++ b/mpc/Cargo.toml
@@ -63,6 +63,7 @@ serde = "1.0.27"
 json = "*"
 hex = "0.3.1"
 spinner = "0.4.0"
+clap = {version = "2.29.4", features = ["yaml"]}
 ipfs-api = { git = "https://github.com/rmnoff/rust-ipfs-api" }
 web3 = { git = "https://github.com/tomusdrw/rust-web3" }
 
