set fixed revision for ipfs api

--- a/mpc/Cargo.toml
+++ b/mpc/Cargo.toml
@@ -59,7 +59,7 @@ json = "*"
 hex = "0.3.1"
 spinner = "0.4.0"
 clap = {version = "2.29.4", features = ["yaml"]}
-ipfs-api = { git = "https://github.com/rmnoff/rust-ipfs-api" }
+ipfs-api = { git = "https://github.com/rmnoff/rust-ipfs-api", rev="17abd00" }
 web3 = "0.2.0"
 
 # Coordinator needs these
