--- a/mpc/Cargo.toml
+++ b/mpc/Cargo.toml
@@ -45,6 +45,7 @@ optional = true
 bn = "0.4.1"
 crossbeam = "0.2.9"
 ethabi = "4.0"
+ethereum-types = "0.2"
 rand = "0.3.14"
 rustc-serialize = "~0.3.19"
 blake2-rfc = "0.2.17"
